{
    "name": "PetrControllers",
    "maps": [
        {
            "name": "Petr",
            "id": "b254a143-91a0-4a4c-b333-ff7297a94467",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7a756589-eac7-404b-abf9-79a1ee2b3a66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootWebs",
                    "type": "Button",
                    "id": "e3fb4261-6a42-4fc1-8bc5-eac56b4680cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84e8e247-ff19-426e-abbf-2040bc0365cf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70d83b74-2063-4877-b535-f8c0ba7502cb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddba030b-6f9f-427f-ae97-831778f44d23",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12efc44b-a3fd-41bf-920e-621d32b3f1c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootWebs",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}